[package]
name = "ludum_dare_55"
version = "0.1.0"
edition = "2021"

[dependencies]
space_editor = { git = "https://github.com/rewin123/space_editor.git", rev = "5067ab5d", default-features = false }

bevy = "0.13.2"
fastrand = "2.0.2"


[features]
editor = ["space_editor/editor"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
# Use release profile as default values
inherits = "release"

# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"

# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "fat"

# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
codegen-units = 1
